--- a/services/user-service/src/main/resources/application.properties
+++ b/services/user-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=user-service
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db
 spring.datasource.username=root
-spring.datasource.password=Teemotroll300;
+spring.datasource.password=${MySQL_PSS}
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
