--- a/services/showtime-service/build.gradle
+++ b/services/showtime-service/build.gradle
@@ -18,6 +18,8 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
