--- a/services/reservation-service/build.gradle
+++ b/services/reservation-service/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'io.github.openfeign:feign-httpclient:12.5' //Dependencia para las Exepciones de Feign
 	implementation 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
